# FileDescriptor

./: FileDescriptor.sln  OutPutFIleWithIp.txt  README.md  ipList.txt  outputFile.txt
FileDescriptor/: CMakeLists.txt  ConfigData.h  FileDescriptor.vcxproj  FileDescriptor.vcxproj.filters  InterFaceDescriptor.cpp  InterFaceDescriptor.h  Main.cpp  PreCaller.h  Result.h  Run.cpp  UnitTests.cpp  UnitTests.h  Validator.cpp  Validator.h  ipList.txt  output.txt  outputFile.txt
UnitTests/: UnitTests.cpp  UnitTests.vcxproj
